resources/assets/sass/base/_base.scss
/* Base Styles */
body, html {
	overflow-x: hidden !important;
	width: 100%;
	scroll-behavior: smooth;
}
html {
	scroll-behavior: smooth;
} 
body {
	position: relative;
}
a:link, a:visited {
	color: $orange;
	text-decoration: underline;

	&.btn, &.wp-block-button__link {
		text-decoration: none;
	}

	&:hover {
		text-decoration: none;
	}
}

.main-container {
	width: $max-width;
	max-width: 100%;
	margin: 20px auto 0px;
	position: relative;
}

h1, h2, h3, h4 {
	text-transform: lowercase;
}

p {
	color: $grey;
}

#main:last-child {
    margin-bottom: 80px;
	@include screen-px(600){
		margin-bottom: 0px;
	}
}
.single-post {
	.site-main {
		width: 800px;
		max-width: 90%;
		margin: 0px auto;
		p {
			max-width: 100%;
			margin: 0px auto 10px;
			line-height: 1.4;
		}
	}
	.wp-block-image {
		figcaption {
			color: $mid-grey;
			font-size: 90%;
			text-align: center;
			padding: 0px 15px;
		}
		img {
			max-width: calc(min(800px, 100%));
			margin-top: 20px;
		}
	}
	figure.alignleft {
		max-width: 400px;
		padding: 10px 20px 10px 0px;
	}
	figure.alignright {
		max-width: 400px;
		padding: 10px 0px 10px 20px;
	}
}

